# Explorer

./: .gitignore  .gitmodules  CMakeLists.txt  trace.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/: heightmap.frag  heightmap.vert  simple.frag  simple.vert  simple_frag_shader.fragment  simple_vertex_shader.vertex  terrain.frag  terrain.fragment  terrain.vert  terrain.vertex
src/: CMakeLists.txt  Main.cpp
src/engine/: AABB.h  Engine.h  Game.cpp  Game.h
src/engine/render/: AbstractRenderer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  SimpleRenderer.cpp  SimpleRenderer.h  Vertex.h
src/engine/terrain/: Heightmap.h  HeightmapRing.h
src/engine/texture/: SimpleTexture.cpp  SimpleTexture.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
src/game/: Explorer.cpp  Explorer.h
src/game/newterrain/: Terrain.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainTree.cpp  TerrainTree.h
src/game/terrain/: HeightmapRenderer.cpp  HeightmapRenderer.h  HeightmapTerrain.cpp  HeightmapTerrain.h  QuadTerrain.cpp  QuadTerrain.h  SimpleHeightmap.cpp  SimpleHeightmap.h  SimpleHeightmapRing.cpp  SimpleHeightmapRing.h  SimpleTerrain.cpp  SimpleTerrain.h  SimpleTerrainRenderer.cpp  SimpleTerrainRenderer.h  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainTree.cpp  TerrainTree.h  WorldGenerator.cpp  WorldGenerator.h  WorldRenderer.cpp  WorldRenderer.h
src/game/world/: Chunk.cpp  Chunk.h
src/util/: FileUtils.hpp  Log.h  MathUtils.hpp
